# fasthtml_examples

./: .gitignore  Dockerfile  README.md  pyproject.toml
public/: htmx_dialogs_custom.css  piwik.js  script.js
public/data/: contacts.csv
src/tutorial/: _01_click_to_edit.py  _02_bulk_update.py  _03_click_to_load.py  _04_delete_row.py  _05_edit_row.py  _06_lazy_loading.py  _07_inline_validation.py  _08_infinite_scroll.py  _09_active_search.py  _10_progress_bar.py  _11_cascading_select.py  _12_animations.py  _13_file_upload.py  __init__.py  example.py  utils.py
src/tutorial/htmx/: _01_click_to_edit.py  _02_bulk_update.py  _04_delete_row.py  _05_edit_row.py  _06_lazy_loading.py  _07_inline_validation.py  _09_active_search.py  _10_progress_bar.py  _11_cascading_select.py  _12_animations.py  _13_file_upload.py  _14_file_upload_input.py  _15_dialogs_browser.py  _16_dialogs_uikit.py  _17_dialogs_bootstrap.py  _18_dialogs_custom.py  _19_tabs_using_hateoas.py  _20_tabs_using_javascript.py  _21_keyboard_shortcuts.py  _22_sortable.py  _23_update_other_content.py  _24_confirm_custom.py  _25_async_auth.py  _26_web_components.py  _27_move_before.py
tests/: test_all.py  test_click_to_edit.py  test_progress_bar.py
